kubernetes/frontend-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-proxy
  template:
    metadata:
      labels:
        app: frontend-proxy
    spec:
      serviceAccountName: astronomy-shop
      containers:
        - name: frontend-proxy
          image: ghcr.io/open-telemetry/demo:2.1.3-frontend-proxy
          ports:
            - containerPort: 8080
            - containerPort: 10000
          resources:
            limits:
              memory: "65Mi"
