kubernetes/frontend-proxy/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-proxy-admin
spec:
  selector:
    app: frontend-proxy
  ports:
    - name: envoy-admin
      port: 10000
      targetPort: 10000
