kubernetes/frontend-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-proxy
spec:
  selector:
    app: frontend-proxy
  ports:
    - name: envoy
      port: 8080
      targetPort: 8080
    - name: envoy-admin
      port: 10000
      targetPort: 10000
